{
    "name": "GameControls",
    "maps": [
        {
            "name": "Game",
            "id": "d8ab5df5-789b-40a5-9c6d-433805ba0da8",
            "actions": [
                {
                    "name": "MouseClicked",
                    "type": "Button",
                    "id": "ee6c5b13-f5cd-477a-895c-478206a89db2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "6eeadd0d-be9c-4645-a2f0-016935ef37df",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8ca290d-b4de-4268-bf59-76ef2f38735c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClicked",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2cfe122-4bd2-49fd-bcca-c4636366aa86",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}